Fixed meal list broken css

--- a/web/views/admin/css/admin.css
+++ b/web/views/admin/css/admin.css
@@ -187,6 +187,7 @@ table#userlist{
 }
 table#meal-list {
   width: 100%;
+  float: right;
   margin-top: 20px;
   margin-bottom: 20px;
 }
